yamls/deploy_go.yaml
apiVersion: v1
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubgolang
  name: kubgolang
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubgolang
  template:
    metadata:
      labels:
        app: kubgolang
    spec:
      containers:
      - image: randolph182/gos
        name: golang-webserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubgolang
  name: kubgolang-srv
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubgolang
  type: ClusterIP
